--- a/css/bin.css
+++ b/css/bin.css
@@ -50,12 +50,15 @@ background-size: contain;
 
 }
 .bin-header h1 {color:#fff;border: none;
+    color: #fff;
+    border: none;
     margin: 0;
     display: block;
-    width: 39%;
+    width: 37%;
     font-size: 300%;
     text-shadow: 3px 3px 1px #000;
     overflow: hidden;
+    float: right;
 }
 .bin-header h2 {color:#fff;border: none;
     margin: 0;
