--- a/css/bin.css
+++ b/css/bin.css
@@ -52,7 +52,7 @@ background-size: contain;
 .bin-header h1 {color:#fff;border: none;
     margin: 0;
     display: block;
-    width: 39%;
+    width: 52%;
     font-size: 300%;
     text-shadow: 3px 3px 1px #000;
     overflow: hidden;
@@ -66,7 +66,7 @@ background-size: contain;
     overflow: hidden;
 }
 .bin-header-flex {
-	display:flex;
+	/* display:flex; */
 	height:100%;
 	position:relative;
 	top:0;}
