--- a/css/bin.css
+++ b/css/bin.css
@@ -76,7 +76,8 @@ width: 410px;
     width: 567px;
 	    float: right;
 }
- .green {color: #39ff39;;}
+ .green {color: #39ff39;}
+.bin-yel {color: #39ff39;}
 .bin-fast {
     font-size: 140%;
     color: #fff;
@@ -610,7 +611,7 @@ min-height: 626px;
 min-height: 711px;
 }	
 .bin-header-flex {
-    top: 148px;
+    top: 106px;
     right: 0px;
 }
 .bin-gpu {
