--- a/css/bin.css
+++ b/css/bin.css
@@ -77,7 +77,10 @@ width: 410px;
 	    float: right;
 }
  .green {color: #39ff39;}
-.bin-yel {color: #39ff39;}
+.bin-yel {color: #ffbb0e;}
+p.bin-fast span {
+    text-shadow: 1px 3px 1px #000, -1px -1px 1px #eaf3f9;
+}
 .bin-fast {
     font-size: 140%;
     color: #fff;
