--- a/css/bin.css
+++ b/css/bin.css
@@ -518,13 +518,14 @@ a.bin-policy {
 @media all and (min-width:1023px) and (max-width:1280px){
 .bin-header h1, .bin-header h2 {
 font-size: 225%;
+line-height: 69px;
 }	
 .bin-header {	
 min-height: 380px;
 }	
  
 .bin-header-flex {
- top: 69px; 
+ top: 58px; 
     min-height: 473px;
 }
 .bin-gpu {
