--- a/css/bin.css
+++ b/css/bin.css
@@ -72,9 +72,13 @@ width: 376px;
 	top:0;}
 .bin-header-center {}
 .bin-header-composition {
-    position: relative;
-    width: 567px;
-	    float: right;
+position: relative;
+    width: 375px;
+    float: right;
+    box-shadow: 1px 1px 1px #000;
+    box-shadow: inset 93px 16px 300px 60px rgba(0,0,0,0.58);
+    padding: 20px;
+    border-radius: 20px;
 }
  .green {color: #39ff39;}
 .bin-yel {color: #ffbb0e;}
