--- a/css/bin.css
+++ b/css/bin.css
@@ -530,6 +530,7 @@ min-height: 380px;
 .bin-header-flex {
  top: 58px; 
     min-height: 473px;
+	    right: 105px;
 }
 .bin-gpu {
     min-height: 422px;
