--- a/css/bin.css
+++ b/css/bin.css
@@ -561,8 +561,8 @@ top: 120px;
 min-height: 503px;
 }	
 .bin-header-flex {
-top: 34px;
-    left: -49px;
+top: 7px;
+    right: 152px;
 }
 .bin-gpu {
     min-height: 557px;
