--- a/css/bin.css
+++ b/css/bin.css
@@ -560,6 +560,9 @@ top: 120px;
 .bin-header {	
 min-height: 503px;
 }	
+.bin-header-composition {
+    width: 394px;
+}
 .bin-header-flex {
 top: 7px;
     right: 152px;
