--- a/css/bin.css
+++ b/css/bin.css
@@ -450,8 +450,13 @@ background-size: contain;
     margin: 0 0 8px;
     background-color: #fff;
     border-radius: 15px;	
-	
-	
+	    padding: 24px;
+}
+.review__consumer-information {
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+    border-bottom: 1px solid #e8e8eb;
+    color: #454554;
 }
 
  .bin-post-foot .bin-vi2 {font-size:11px;line-height: 1.50;max-width: 900px;}
