--- a/css/bin.css
+++ b/css/bin.css
@@ -468,6 +468,8 @@ background-size: contain;
     background-color: #f2f2f5;
 	background-image: url(../items/ava.png);
 	    background-size: 100%;
+		float: left;
+    margin: 5px 3px 3px 3px;
 }
 
  .bin-post-foot .bin-vi2 {font-size:11px;line-height: 1.50;max-width: 900px;}
