--- a/css/bin.css
+++ b/css/bin.css
@@ -677,16 +677,12 @@ min-height: 711px;
 
 
 /* General Styles */
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-html, button, input, select, textarea {
+
+ input, select, textarea {
     font-family: 'Source Sans Pro', Helvetica, sans-serif;
     color: #666;
 }
-button, input, select, textarea {
+input, select, textarea {
     font-size: 100%;
     margin: 0;
     max-width: 100%;
@@ -706,10 +702,7 @@ textarea {
     max-width: 760px;
     margin: 30px auto;
 }
-h1 {
-    padding: 15px;
-    margin: 0;
-}
+
 #commentform {
     display: -webkit-box;
     display: -webkit-flex;
