--- a/css/bin.css
+++ b/css/bin.css
@@ -735,6 +735,7 @@ textarea {
                 -ms-flex: 0 0 50%;
                         flex: 0 0 50%;
         max-width: 50%;
+		box-sizing: border-box;
     }
 }
 
