--- a/css/bin.css
+++ b/css/bin.css
@@ -920,6 +920,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, te
 #commentform textarea:placeholder-shown {
     background-color: transparent;
     border: 1px solid #d8d8d8;
+	    padding: 10px 0!important;
 }
 #commentform input::placeholder,
 #commentform textarea::placeholder {
