--- a/css/bin.css
+++ b/css/bin.css
@@ -716,6 +716,7 @@ textarea {
 
 /* Layout Stuff */
 .comment-section {
+	    overflow: hidden;
     width: 100%;
     max-width: 760px;
     margin: 30px auto;
