--- a/css/bin.css
+++ b/css/bin.css
@@ -98,6 +98,7 @@ text-shadow: 1px 3px 1px #000, -1px -1px 1px #3b382b;
 
 }
 .bin-button {
+	min-width: 350px;
     color: #444;
     background-color: #FFF;
     overflow: hidden;
