--- a/css/bin.css
+++ b/css/bin.css
@@ -99,6 +99,7 @@ text-shadow: 1px 3px 1px #000, -1px -1px 1px #3b382b;
 }
 .bin-button {
 	min-width: 350px;
+	    margin: 0 auto;
     color: #444;
     background-color: #FFF;
     overflow: hidden;
