--- a/css/bin.css
+++ b/css/bin.css
@@ -476,7 +476,13 @@ background-size: contain;
 		float: left;
     margin: -4px 15px 3px 3px;
 }
-
+@media all and (min-width:330px) and (max-width:400px){
+.bin-header-flex {
+    max-width: 330px;
+    margin: 0;
+}	
+	
+}	
  .bin-post-foot .bin-vi2 {font-size:11px;line-height: 1.50;max-width: 900px;}
 @media all and (min-width:350px) and (max-width:1023px){
 #page-wrapper .bin-menu ul li {
