--- a/css/bin.css
+++ b/css/bin.css
@@ -483,9 +483,11 @@ background-size: contain;
 }	
 .bin-header-composition {
 float: none;
-
 }
+.bin-button {
+    min-width: 200px;
 	
+}
 }	
  .bin-post-foot .bin-vi2 {font-size:11px;line-height: 1.50;max-width: 900px;}
 @media all and (min-width:350px) and (max-width:1023px){
